# Raytrack

./: .gitignore  CMakeLists.txt  Design.md  LICENSE  README.md  aabb.h  bvh.h  camera.h  color.h  disk.h  glad.c  hittable.h  hittable_list.cpp  hittable_list.h  image.ppm  imgui.ini  interval.h  main.cpp  material.h  misc.h  ray.h  render_worker.cpp  render_worker.h  rtw_image.h  rtweekend.h  scene.h  scene_presets.h  sphere.h  stb_img_include.h  texture.h  transformers.h  ui_components.cpp  ui_components.h  user_interface.h  vec3.h  viewport.cpp  viewport.h  volume_convex.h  window_main.cpp
.github/workflows/: macos-cmake.yml  ubuntu-cmake.yml  windows-cmake.yml
imgui/: imgui_widgets.cpp
include/glad/: glad.h
include/im-file-dialog/: ImFileDialog.cpp
include/imgui/: imgui.h
primitives/generator/: perlin.h
primitives/geometry/: disk.h  geo_cube.h  geo_disk.h  geo_quad.h  geo_sphere.h  quad.h  sphere.h
primitives/materials/: basic_materials.h  debug.h  diffuse.h  mat_debug.h  mat_diffuse.h  mat_emissive.h  mat_metallic.h  mat_translucent.h  mat_volumetric.h  metallic.h  translucent.h
primitives/textures/: tex_checker.h  tex_color.h  tex_image.h  tex_perlin.h  tex_uv_debug.h
